# Vop2el

./: .gitmodules  CMakeLists.txt  README.md
vop2el_src/: CMakeLists.txt
vop2el_src/test/: RerunVisualizer.cpp  RerunVisualizer.h  StereoCameraParameters.txt  Utils.cpp  Utils.h  Volp2elParameters.ini  main.cpp  vop2el.rbl
vop2el_src/vop2el_lib/include/: Common.h  PatchCorrector.h  StereoImagesHandler.h  Vop2elAlgorithm.h  Vop2elCostStructs.h  Vop2elMatcher.h
vop2el_src/vop2el_lib/src/: Common.cpp  PatchCorrector.cpp  StereoImagesHandler.cpp  Vop2elAlgorithm.cpp  Vop2elMatcher.cpp
